Fix footer margin/align issues

--- a/CrowdfundingWeb/wwwroot/css/index.css
+++ b/CrowdfundingWeb/wwwroot/css/index.css
@@ -68,7 +68,7 @@ h5 {
 
 .index-body {
     background-image: url("../images/index-bg2.png");
-    background-color: #e7dfc6;
+    background-color: #e9f1f7;
     background-repeat: no-repeat;
     background-size: 100% 100%;
     opacity: 0.9;
